<resources>
    <string name="app_name">Learning About Wine</string>
    <string name="title_activity_buying_wine">Buying Wine</string>
    <string name="title_activity_wine_types">Wine Types</string>
    <string name="wine_tagging_overview">When storing wine, it is a good idea to tag each bottle
        using a system that enables you to identify important information about the wine.
        The most important information, of course, is whether or not it is okay to drink the wine now.
        \n\nIt does not really matter what system you choose, as long as you can understand it easily.
        In fact, there may be some advantages to having your code be intelligible only to you!
    </string>
    <string name="wine_tagging_example">Vintage\nPrice\nDrinking Window\nType of Wine\n\nBefore thinking about what goes on your tag, decide how
        you will organize the wine physically on the shelves. This way, at least one of the parameters
        above will already be baked into your storage system. For example, I organize my shelves by
        wine type or region and then keep the info on the tag basically limited to info that will
        inform my drinking decision, to avoid accidentally drinking something expensive, rare, or too young.
    </string>
    <string name="wine_racks">
        There are many different types of wine racks available, in all shapes, sizes, and materials.
        Amazon.com has countless options, and there are boutique manufacturers if you are looking for
        something high-end or custom.\n\nThe main questions you need to answer for yourself are the following:\n\n
        1) How much wine do you want to keep?\n
        2) Do you want to display your wine?\n
        3) How much do you want to spend?\n
        4) Do you enjoy building things on your own?\n\nThe last point is worded specifically as "enjoy" because I strongly suggest you consider this
        option only if you truly want to take the time to build something or learn to build something.
        The reason I emphasize this is that you will likely not save money by building it on your own.
        The cost of even basic materials, such as plywood, when all is said and done, will likely end
        up being more expensive for a given amount of storage than if you purchase something online.
        And to do this well, you need to design (carefully, including very precise measurements),
        purchase materials, which can be tedious, and then patiently build it, adjusting your plans
        along the way, as you inevitably realize that things are not just right.\n\nIf you do decide to build it yourself, the most important thing to keep in mind is load bearing
        capacity, because wine is not weightless. A bottle of wine will weigh between 2-3 pounds. So
        each shelf will end up with a load of approximately 2.5 pounds per inch of width. A shelf that
        will have 10 bottles, therefore, should be able to support at least 25 pounds (of course, you
        want to err way on the high side, probably designing for 50 pound load). Long story short, if
        you do not want to think about this, do not do it yourself!\n\nOne more thing to keep in mind:
        if you live in a region that is known for earthquakes, be sure to provide proper bracing for
        the racks. If your bottles are lying flat, make sure to have something that keeps them from
        coming out of the front or back of the rack.
    </string>
    <string name="drinking_wine_page_overview">There is <i>tasting</i> wine. And there is <i>drinking</i> wine. When we think about tasting wine, this is a process
        of quantitative and qualitative analysis. Wine tasting, while definitely not an exact science, has a
        number of criteria or parameters that are intended to help us categorize things and understand them.
        There is a sense of geography (region) and geology (terroir). Wine drinking is much about the art and
        pleasure of wine, involving how it stands on its own, how it pairs with food, how it makes one feel, etc.
        In the sections below, I will say just a little about each of these, as well as providing some links to
        resources that I have found helpful.
    </string>
    <string name="wine_drinking_overview">I am sure you can find countless pompous blogs online that will tell you exactly how to put the wine in your mouth,
        as if you have never consumed a beverage before. I am also sure you can find plenty of aficionados who will explain to you
        that Pinot Noir will taste like Ginger Ale if you do not drink it out of a Burgundy glass. For some people maybe it is true. I
        will tell you this: the power of suggestion is quite powerful, and if you believe that glass is going to make your wine taste
        better, I guarantee you it will.\n\nOne of the most amazing things to me about wine is how much of its enjoyment relates to the
        state of mind we are in when we drink it. The company. The food. The event. The time of day. The time of year. It all matters. Maybe.
        \n\nMost of the time, red wine will be better if decanted than if you pour directly from the bottle. This is not an absolute statement, but a
        reasonable generalization. Furthermore, many wines will be better if, after decanting, they are allowed to breathe for a while. Here is
        where the art comes into play. It may be that 30 minutes of decanting is perfect. Or it may be that 1-2 days of decanting is perfect. You
        can make some guesses based on the age of the wine, and type of wine, but it will be trial and error. One thing that can be very useful
        in this situation are websites that have customer reviews of wines, such as <a href="http://www.cellartracker.com">Cellar Tracker</a>, because
        you can often find a lengthy history of what others have recently said regarding the readiness of the wine. The upside is that it can be useful
        info. The downside is that some of the opinions may not reflect your tastes, and there is always the power of suggestion, ruining a little
        of the mystery and surprise of trying a new wine (if you read that you are going to taste dark cherries, you are probably more likely to
        identify dark cherries).
    </string>
    <string name="wine_tasting_overview">Wine tasting can be as casual or as granular as you want it to be. There are
        four main criteria to think about when evaluating wine. I will not go into them in detail here, but will give you
        a quick description, and then a link to one of my favorite websites that says more about it.\n\n<b>Appearance</b>\nOne
        can tell a lot about a wine based just on how it looks. This consists of color, clarity, and
        viscosity (how the wine moves in the glass). Generally, all wine, whether it be red or white, will take on more of a
        brownish hue as it ages.\n\n<b>Aroma</b>\nThis is where all the action is. The primary aromas come from the grapes
        themselves; secondary aromas come from the fermentation process; tertiary aromas come from the aging process.\n\n<b>Taste</b>\nThe
        first part of the taste of wine is the "Flavor," which is basically the in-mouth representation of the aroma. It often is very similar
        to what you picked up on the nose, but there can be interesting and surprising variations. The next component of taste
        is what is referred to as "Structure" of the wine. It comprises 5 basic components: (1) Sweetness, (2) Body (mouth-feel),
        (3) Alcohol (often perceived as heat), (4) Acidity (tartness/crispness), and (5) tannin (perceived on the tongue as an
        astringent feeling, and often prominent in young red wines; comes primarily from things like skin and stems of grapes).
        The final component of the taste of the wine is referred to as "Profile," which we think of as how these elements of taste
        evolve from the initial moment the wine hits the palate, on to the lingering after-effects in the mouth (the finish).
    </string>
    <string name="wine_aroma_wheel">I really have not done justice to this at all, but Wine Folly is a fantastic website that
        goes into much more detail, and I highly recommend looking at their detailed guide to <a href="http://winefolly.com/review/how-to-taste-wine-develop-palate/">Tasting Wine</a>.
        To help identify the different odors and tastes in wine, there have been many different variants on what
        is called an "Aroma Wheel" that break these into different categories, according to the type of wine, and
        the groupings of scents (e.g. fruits, vegetebles, defects, etc.) that are commonly detected. You can see a
        nice example of an Aroma Wheel at the <a href="http://winefolly.com/wp-content/uploads/2014/08/Wine-Aroma-Flavor-Chart-Wheel.jpg">Wine Folly</a> website.</string>
    <string name="wine_pairing_overview">Wine Pairing is the art (or science) of identifying which types of wine will be
        best enjoyed with which types of food. Much of it is logic, and there are some basic rules of thumb. Delicate wines
        pair well with delicate foods. Bold, spicy, or tannic wines pair well with things that are rich, fatty, creamy, because
        the food mellows the wine. The latter fact can be very useful if you want to drink a great wine that is perhaps a bit young
        (tannins mellow as they age, making wine smoother, less astringent). I will not bore you with the long lists of recommended
        pairings. Instead I will, once again, point you to Wine Folly, my favorite site, for their page that is dedicated to
        <a href="http://winefolly.com/review/simple-food-and-wine-pairing/">wine pairings</a>.
    </string>
</resources>